# math5610

./: Dockerfile  README.md  build_run.sh
homework/: README.md  homework01.md  homework02.md  homework03.md  homework04.md  homework05.md  homework06.md  homework07.md  homework08.md  hw06_appendix3.md
software_manual/: Array.md  DenseArray.md  MachineEpsilon.md  README.md  Vector.md  absoluteError.md  add.md  backsub.md  cg.md  cholesky.md  cross.md  dot.md  estimate2NormConditionNumber.md  forwardsub.md  gaussSeidelSolve.md  getDoubleMachineEpsilon.md  getMachineEpsilon.md  getRandomSPDArray.md  infNorm.md  infNormAbsoluteError.md  inverseEigenJacobiSolve.md  inverseEigenSolve.md  jacobiSolve.md  l1Norm.md  l1NormAbsoluteError.md  l2Norm.md  l2NormAbsoluteError.md  lu.md  luSolve.md  makeRandomArray.md  makeRandomDD.md  makeRandomRawArray.md  makeRandomSymmetric.md  makeRandomSymmetricDD.md  matmul.md  matrix1Norm.md  matrixInfNorm.md  multiply.md  powerEigenSolve.md  qrSolve.md  (+11 more)
src/: CMakeLists.txt
src/lib/: Array.hpp  ArrayInstantiations.cpp  ArrayInstantiations.hpp  ArrayUtils.cpp  ArrayUtils.hpp  DenseArray.hpp  DenseArray.ipp  EigenvalueSolvers.cpp  EigenvalueSolvers.hpp  LibLinAlg.hpp  LinearSolvers.cpp  LinearSolvers.hpp  MachineEpsilon.cpp  MachineEpsilon.hpp  MatrixNorms.cpp  MatrixNorms.hpp  Utils.cpp  Utils.hpp  Vector.hpp  Vector.ipp  VectorNorms.cpp  VectorNorms.hpp  maceps.cpp  maceps.hpp  test_main.cpp
src/toy_programs/: Hello  grapher.py  multicore_hello.cpp
